[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/scripts/App.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/normal_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/icons/settings_normal.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/add_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/add_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/settings_hover.png" type="Texture" id=7]
[ext_resource path="res://src/scenes/AddObjectDialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/GenerationSettingsDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/icons/bag(1).svg" type="Texture" id=10]
[ext_resource path="res://src/styles/main_button_style.tres" type="StyleBox" id=11]
[ext_resource path="res://src/styles/main_buttion_hover.tres" type="StyleBox" id=12]

[node name="App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bag" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Bag"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bag/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bag/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0
alignment = 1

[node name="Label" type="Label" parent="Bag/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sac à dos"

[node name="TextureRect" type="TextureRect" parent="Bag/VBoxContainer"]
margin_top = 64.0
margin_right = 512.0
margin_bottom = 540.0
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Bag/VBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Bag/VBoxContainer/TextureRect/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 460.0
color = Color( 0, 0, 0, 0.196078 )

[node name="ScrollContainer" type="ScrollContainer" parent="Bag/VBoxContainer/TextureRect/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagObjectList" type="VBoxContainer" parent="Bag/VBoxContainer/TextureRect/MarginContainer/ColorRect/ScrollContainer"]
margin_right = 480.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="Bag/VBoxContainer"]
margin_top = 540.0
margin_right = 512.0
margin_bottom = 600.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="Button" type="Button" parent="Bag/VBoxContainer/MarginContainer2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 44.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Remplir le sac"

[node name="Objects" type="ColorRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Objects"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Objects/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Objects/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Objets"
align = 1

[node name="ObjetsNumber" type="Label" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 158.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "(0)"

[node name="Control" type="Control" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 444.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="AddObjectButton" type="TextureButton" parent="Objects/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 448.0
margin_top = 4.0
margin_right = 480.0
margin_bottom = 36.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="MarginContainer3" type="MarginContainer" parent="Objects/VBoxContainer"]
margin_top = 64.0
margin_right = 512.0
margin_bottom = 542.0
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_left = 16

[node name="MarginContainer2" type="ColorRect" parent="Objects/VBoxContainer/MarginContainer3"]
margin_left = 16.0
margin_right = 496.0
margin_bottom = 478.0
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.117647 )

[node name="ScrollContainer" type="ScrollContainer" parent="Objects/VBoxContainer/MarginContainer3/MarginContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectList" type="VBoxContainer" parent="Objects/VBoxContainer/MarginContainer3/MarginContainer2/ScrollContainer"]
margin_right = 480.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Objects/VBoxContainer"]
margin_top = 542.0
margin_right = 512.0
margin_bottom = 600.0
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Objects/VBoxContainer/MarginContainer2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 42.0
custom_constants/separation = 10
alignment = 1

[node name="DeleteAllButton" type="Button" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 170.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "Tout supprimer"

[node name="Control" type="Control" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 180.0
margin_right = 256.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="GenerationSettingsButton" type="TextureButton" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 266.0
margin_top = 4.0
margin_right = 292.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )

[node name="GenerationNumber" type="SpinBox" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 302.0
margin_right = 376.0
margin_bottom = 34.0
min_value = 1.0
max_value = 1e+07
value = 1.0
align = 1

[node name="GenerateButton" type="Button" parent="Objects/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 386.0
margin_right = 480.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "Générer"

[node name="AddObjectDialog" parent="." instance=ExtResource( 8 )]

[node name="GenerationSettings" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer/HBoxContainer/AddObjectButton" to="." method="_on_AddObjectButton_pressed"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer2/HBoxContainer/DeleteAllButton" to="." method="_on_DeleteAllButton_pressed"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer2/HBoxContainer/GenerationSettingsButton" to="." method="_on_GenerationSettingsButton_pressed"]
[connection signal="pressed" from="Objects/VBoxContainer/MarginContainer2/HBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="confirmed" from="AddObjectDialog" to="." method="_on_AddObjectDialog_confirmed"]
